--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/css/bootstrap.css')
   body
-    block content
+    div.container
+      div.row
+        div.col-md-12
+          block content
